@@ -34,6 +34,7 @@ SecureServ Module for NeoStats Changelog.
  - Fix for bug 101 (onjoin bot crash when only one bot defined) (M)
  - Change misnamed is_pub_chan check to is_priv_chan (M)
  - Cycle MONCHANS option (F)
+ - New Option to also scan channel messages (F)
 
 1.0 - Fish (F) and Mark (M) - 22 Aug, 2003
  - Fixed a problem with users signing off while NeoStats was still booting. (F)
